# UDEMY_Playwright_

./: .gitignore  README.md  pyproject.toml
.pytest_cache/v/cache/: lastfailed  nodeids
1-5_sections/: test.py  test2 copy.py  test2.py
6_section/tests/: conftest.py  test_bing.py  test_login.py  test_unit.py
7_section/tests/: test_api.py  test_cli.py  test_context.py  test_debug.py  test_downloads.py  test_emulation.py  test_events.py
8_section/: test_frames.py  test_inputs.py
